# codi1bit

./: .gitignore  codi1bit.cabal  hie.yaml
scripts/: clean.sh  hard-clean.sh  run.sh
src/: Codi1Bit.hs  Main.hs
