cabal-version:      3.0
name:               codi1bit
version:            0.1.0.0
synopsis:           Implementation of codi1bit automaton for both 2D and 3D grids
-- description:
homepage:           https://github.com/yippiez/codi1bit
license:            GPL-3.0-or-later
license-file:       LICENSE
-- copyright:
category:           Science
build-type:         Simple

common warnings
    ghc-options: -Wall -ignore-dot-ghci

executable codi1bit
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5
    hs-source-dirs:   src
    default-language: Haskell2010
